# Kylions-CN-RAG-System

./: .gitignore  RAG系统技术方案设计文档.md  README.md  main.py  pyproject.toml  requirements.txt  面试者代码提供要求.md
data/qdrant_storage/: meta.json
prompts/: answer_evaluation.jinja2
src/: __init__.py  config.py  exceptions.py  rag_system.py
src/chunkers/: __init__.py  simple_overlap_chunker.py
src/embeddings/: __init__.py  bge_embedder.py
src/model/: __init__.py  config_models.py  document_models.py  search_models.py
src/parsers/: __init__.py  simple_pdf_parser.py
src/retrievers/: __init__.py  qdrant_retriever.py
tests/: comprehensive_test.py  test_bge_embedder.py  test_pdf_parser.py  test_rag_integration.py  test_simple_overlap_chunker.py
