[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "rag-kylinos"
version = "1.0.0"
description = "麒麟操作系统手册RAG检索系统"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "RAG Developer" },
]
classifiers = [
    "Development Status :: 4 - Beta", 
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"

# 核心生产依赖 - 仅包含直接依赖
dependencies = [
    "sentence-transformers>=2.0.0",  # 中文语义向量化（BGE模型）
    "qdrant-client>=1.0.0",         # 向量数据库客户端
    "PyMuPDF>=1.20.0",              # PDF文档解析
    "loguru>=0.7.0",                # 结构化日志记录
    "pydantic>=2.0.0",              # 数据模型和验证
    "PyYAML>=6.0",                  # 配置文件解析
]

[project.optional-dependencies]
# 开发和测试依赖
dev = [
    "pytest>=7.0.0",               # 测试框架
    "pytest-cov>=4.0.0",           # 测试覆盖率
    "black>=23.0.0",                # 代码格式化
    "isort>=5.0.0",                 # import排序
    "flake8>=6.0.0",                # 代码检查
]

# uv 会自动使用 [project.optional-dependencies] 中的 dev 依赖

# 开发工具配置（简化版）
[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
